--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -47,6 +47,7 @@
 "Addition" = "其他";
 "TicketNotice" = "請妥善保管您的票券，僅提供此票券給我們的工作人員或您參與攤位活動的工作人員使用";
 "TicketNonExistNotice" = "您的票券尚未登錄進 OPass，請登錄後再使用此功能！";
+"TicketLogout" = "登出";
 "Acknowledgements" = "開發者";
 "Contributions" = "貢獻者";
 "Libraries" = "開源專案";
