--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -48,6 +48,8 @@
 "TicketNotice" = "請妥善保管您的票券，僅提供此票券給我們的工作人員或您參與攤位活動的工作人員使用";
 "TicketNonExistNotice" = "您的票券尚未登錄進 OPass，請登錄後再使用此功能！";
 "TicketLogout" = "登出";
+"TicketLogoutWarning" = "確定要登出嗎？";
+"TicketLogoutWarningDesc" = "你可能需要重新掃描 QRCode 或重新使用連結登入才能使用這個活動的完整功能";
 "Acknowledgements" = "開發者";
 "Contributions" = "貢獻者";
 "Libraries" = "開源專案";
