Sync stored data across devices through iCloud (Not tested) And some minor things

--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -34,8 +34,8 @@
 "Loading" = "Loading...";
 "FastPass" = "Fast Pass";
 "Setting" = "Setting";
-"DebugFuction" = "Debug Fuction";
-"DeveloperOption" = "Developer Option";
+"ABOUT" = "ABOUT";
+"OfficialWebsite" = "Official Website";
 "PrivacyPolicy" = "Privacy Policy";
 "Version" = "Version";
 "Close" = "Close";
