--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -34,8 +34,8 @@
 "Loading" = "載入中...";
 "FastPass" = "快速通關";
 "Setting" = "設定";
-"DebugFuction" = "調試";
-"DeveloperOption" = "開發者選項";
+"ABOUT" = "關於";
+"OfficialWebsite" = "官方網站";
 "PrivacyPolicy" = "隱私權政策";
 "Version" = "版本";
 "Close" = "關閉";
