Update Logger, Sound Manager

--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -59,6 +59,7 @@
 "OnlyAvailableAtContent" = "Only available at\n%d/%d/%d %d:%02d ~ %d/%d/%d %d:%02d";
 "Loading" = "Loading...";
 "Setting" = "Setting";
+"FastPass" = "Fast Pass";
 "ABOUT" = "ABOUT";
 "OfficialWebsite" = "Official Website";
 "PrivacyPolicy" = "Privacy Policy";
