--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -7,6 +7,7 @@
   
 */
 
+"TokenCopied" = "已複製驗證碼！";
 "TryAgain" = "再試一次";
 "ErrorWithRetryContent" = "出了點問題，但不要擔心。\n讓我們再試一次。";
 "ErrorContent" = "出了點問題，但不要擔心。\n稍後再試試看。";
