--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -7,6 +7,7 @@
   
 */
 
+"TokenCopied" = "Token Copied!";
 "TryAgain" = "Try Again";
 "ErrorWithRetryContent" = "Something went wrong, but don't feel fret.\nLet's give it another shot.";
 "ErrorContent" = "Something went wrong, but don't feel fret.\nTry again later.";
