--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -63,6 +63,11 @@
 "Loading" = "載入中...";
 "Setting" = "設定";
 "FastPass" = "快速通關";
+"System" = "系統";
+"Light" = "亮色";
+"Dark" = "深色";
+"Appearance" = "外觀";
+"GENERAL" = "一般";
 "ABOUT" = "關於";
 "OfficialWebsite" = "官方網站";
 "PrivacyPolicy" = "隱私權政策";
