Fix co-writing correctly
Rename pad to co_writing in SessionDataModel

--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -27,7 +27,7 @@
 "TimeWithLengthContent" = "%d:%02d ~ %d:%02d • %d minutes";
 "Place" = "Place";
 "Live" = "Live";
-"CoWriting" = "Co-writing";
+"CoWriting" = "Co-Writing";
 "Record" = "Record";
 "Slide" = "Slide";
 "QA" = "QA";
