--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -47,10 +47,12 @@
 "ScanToGetTokenContent" = "請尋找電子郵件提供的二維碼，並將其放置在取景器中";
 "ScanToGetToken" = "掃描取得驗證碼";
 "EnterTokenManually" = "手動輸入驗證碼";
-"SelectAPictureToScanQRCode" = "選擇照片掃描QR Code";
+"SelectAPictureToScanQRCode" = "選擇照片掃描 QR Code";
 "InvaildToken" = "無效的驗證碼";
-"NoQRCodeFoundInPicture" = "在圖片中找不到QR Code";
-"ScanQRCodeWithCamera" = "使用相機掃描QR Code";
+"NoQRCodeFoundInPicture" = "在圖片中找不到 QR Code";
+"ScanQRCodeWithCamera" = "使用相機掃描 QR Code";
+"RequestUserPermitCamera" = "請允許 OPass 在您設備設定中的 OPass 下訪問您的相機";
+"OpenSettings" = "打開設定";
 "Complete" = "完成";
 "ConfirmUse" = "確認使用";
 "ConfirmUseScenarioMessage" = "此項目只能使用一次，請按照工作人員的指示使用。";
