--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -22,6 +22,7 @@
 "Tags" = "標籤";
 "Favorite" = "喜歡";
 "AllSessions" = "所有議程";
+"AddToCalendar" = "新增至行事曆";
 "Speakers" = "講師";
 "SessionIntroduction" = "議程介紹";
 "TimeWithLengthContent" = "%d:%02d ~ %d:%02d • %d分鐘";
