--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -54,6 +54,8 @@
 "NoQRCodeFoundInPicture" = "No QR Code found in picture";
 "ScanQRCodeWithCamera" = "Scan QR Code with camera";
 "RequestUserPermitCamera" = "Please allow OPass to access your camera under OPass in your device's settings.";
+"RequestUserPermitCalendar" = "Please allow OPass to access your calendar under OPass in your device's settings.";
+"Settings" = "Settings";
 "OpenSettings" = "Open Settings";
 "Complete" = "Complete";
 "ConfirmUse" = "Confirm Use";
