--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 "Types" = "Types";
 "Tags" = "Tags";
 "Favorite" = "Favorite";
+"NoEventFiltered" = "No Event Filtered";
 "AllSessions" = "All Sessions";
 "AddToCalendar" = "Add to Calendar";
 "Speakers" = "Speakers";
