--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -21,7 +21,7 @@
 "Types" = "類型";
 "Tags" = "標籤";
 "Favorite" = "喜歡";
-"NoEventFiltered" = "沒有篩選的活動";
+"NoFilteredEvent" = "沒有篩選的活動";
 "AllSessions" = "所有議程";
 "AddToCalendar" = "新增至行事曆";
 "Speakers" = "講師";
