Add ability to share session uri

--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -24,6 +24,7 @@
 "NoFilteredEvent" = "沒有篩選的活動";
 "AllSessions" = "所有議程";
 "AddToCalendar" = "新增至行事曆";
+"Share" = "分享";
 "Speakers" = "講師";
 "More" = "更多";
 "SessionIntroduction" = "議程介紹";
