--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -24,6 +24,7 @@
 "NoFilteredEvent" = "No Filtered Event";
 "AllSessions" = "All Sessions";
 "AddToCalendar" = "Add to Calendar";
+"Share" = "Share";
 "Speakers" = "Speakers";
 "More" = "More";
 "SessionIntroduction" = "Session Introduction";
