Deprecated BetterSafariView with custom SFSafari
BetterSafariView has not been maintained and updated for a long time while SwiftUI is still developing rapidly.
Because of this, BetterSafariView isn’t
suitable in current SwiftUI 3 and future version.
So I deprecated it and make a new one for better experience and easier maintain.

--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -86,6 +86,9 @@
 "OfficialWebsite" = "Official Website";
 "PrivacyPolicy" = "Privacy Policy";
 "Version" = "Version";
+"ADVANCED" = "ADVANCED";
+"AdvancedOption" = "Advanced Option";
+"ClearCacheData" = "Clear Cache Data";
 "Close" = "Close";
 "SelectEvent" = "Select Event";
 "SessionWillStartIn5Minutes" = "Session will start in 5 mins.";
