--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -75,12 +75,17 @@
 "InvalidURL" = "Invalid URL";
 "OK" = "OK";
 "InvalidURLOrTokenContent" = "You have an invalid URL or the token is incorrect.";
-"Setting" = "Setting";
 "FastPass" = "Fast Pass";
 "System" = "System";
-"Light" = "Light";
-"Dark" = "Dark";
+"On" = "On";
+"Off" = "Off";
 "Appearance" = "Appearance";
+"SCHEDULE" = "SCHEDULE";
+"PastSession" = "Past Session";
+"FutureSession" = "Future Session";
+"Dim Past Session" = "Dim Past Session";
+"DarkMode" = "Dark Mode";
+"ResetAllAppearance" = "Reset All Appearance";
 "GENERAL" = "GENERAL";
 "ABOUT" = "ABOUT";
 "OfficialWebsite" = "Official Website";
