--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -75,12 +75,17 @@
 "InvalidURL" = "無效的網址";
 "OK" = "好";
 "InvalidURLOrTokenContent" = "您的網址無效或驗證碼不正確。";
-"Setting" = "設定";
 "FastPass" = "快速通關";
 "System" = "系統";
-"Light" = "亮色";
-"Dark" = "深色";
+"On" = "開啟";
+"Off" = "關閉";
 "Appearance" = "外觀";
+"SCHEDULE" = "議程";
+"PastSession" = "結束的議程";
+"FutureSession" = "未來的議程";
+"Dim Past Session" = "暗淡結束的議程";
+"DarkMode" = "夜間模式";
+"ResetAllAppearance" = "重置所有外觀";
 "GENERAL" = "一般";
 "ABOUT" = "關於";
 "OfficialWebsite" = "官方網站";
