Adjust DarkMode chinese

--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -84,7 +84,7 @@
 "PastSession" = "結束的議程";
 "FutureSession" = "未來的議程";
 "Dim Past Session" = "暗淡結束的議程";
-"DarkMode" = "夜間模式";
+"DarkMode" = "深色模式";
 "ResetAllAppearance" = "重置所有外觀";
 "GENERAL" = "一般";
 "ABOUT" = "關於";
