--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -91,6 +91,7 @@
 "ABOUT" = "ABOUT";
 "OfficialWebsite" = "Official Website";
 "PrivacyPolicy" = "Privacy Policy";
+"Developers" = "Developers";
 "Version" = "Version";
 "ADVANCED" = "ADVANCED";
 "AdvancedOption" = "Advanced Option";
