--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -91,6 +91,7 @@
 "ABOUT" = "關於";
 "OfficialWebsite" = "官方網站";
 "PrivacyPolicy" = "隱私權政策";
+"Developers" = "開發人員";
 "ADVANCED" = "進階";
 "AdvancedOption" = "進階選項";
 "ClearCacheData" = "清除快取資料";
