--- a/Supporting Files/Localizable.xcstrings
+++ b/Supporting Files/Localizable.xcstrings
@@ -2,6 +2,7 @@
   "sourceLanguage" : "en",
   "strings" : {
     "%lld contribution%@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -76,6 +77,7 @@
       }
     },
     "ADVANCED" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -86,6 +88,7 @@
       }
     },
     "AdvancedOption" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -111,6 +114,9 @@
         }
       }
     },
+    "Auto-Select Schedule Day" : {
+
+    },
     "AutoBrighten" : {
       "localizations" : {
         "en" : {
@@ -128,6 +134,7 @@
       }
     },
     "AutoSelectScheduleDay" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -220,6 +227,7 @@
       }
     },
     "ClearCacheData" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -361,7 +369,11 @@
         }
       }
     },
+    "Dark Mode" : {
+
+    },
     "DarkMode" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -378,6 +390,7 @@
       }
     },
     "Developers" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -396,6 +409,9 @@
           }
         }
       }
+    },
+    "Disable" : {
+
     },
     "Done" : {
       "localizations" : {
@@ -438,6 +454,9 @@
           }
         }
       }
+    },
+    "Enable" : {
+
     },
     "EnterTokenManually" : {
       "localizations" : {
@@ -528,6 +547,7 @@
       }
     },
     "FEATURE" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -583,6 +603,9 @@
         }
       }
     },
+    "General" : {
+
+    },
     "GENERAL" : {
       "localizations" : {
         "zh-Hant" : {
@@ -610,6 +633,7 @@
       }
     },
     "GitHub" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -618,6 +642,9 @@
           }
         }
       }
+    },
+    "Haptic Feedback" : {
+
     },
     "InvaildToken" : {
       "localizations" : {
@@ -678,6 +705,7 @@
       }
     },
     "LOADING" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -702,6 +730,9 @@
           }
         }
       }
+    },
+    "Made with Love" : {
+
     },
     "MON" : {
       "localizations" : {
@@ -792,6 +823,7 @@
       }
     },
     "Off" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -802,6 +834,7 @@
       }
     },
     "OfficialWebsite" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -828,6 +861,7 @@
       }
     },
     "On" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -883,6 +917,9 @@
         }
       }
     },
+    "Open Pass & All Pass - A Community Checkin with Interactivity Project for iOS" : {
+
+    },
     "OpenSettings" : {
       "localizations" : {
         "en" : {
@@ -936,6 +973,7 @@
       }
     },
     "PrivacyPolicy" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -984,6 +1022,7 @@
       }
     },
     "Reset All" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -992,6 +1031,9 @@
           }
         }
       }
+    },
+    "Reset Appearance Settings" : {
+
     },
     "Reset filters" : {
       "localizations" : {
@@ -1003,7 +1045,11 @@
         }
       }
     },
+    "Reset General Settings" : {
+
+    },
     "ResetAllAppearance" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -1386,11 +1432,22 @@
       }
     },
     "Version" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "版本"
+          }
+        }
+      }
+    },
+    "Version %@ (%@)" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "Version %1$@ (%2$@)"
           }
         }
       }
